[package]
name = "rustjack"
version = "1.0.0"
edition = "2021"

[dependencies]
axum = "0.7"
axum-server = { version = "0.8", features = ["tls-rustls"] }
tokio = { version = "1.3", features = ["full", "signal"] }
kube = { version = "0.88.1", default-features = false, features = ["client", "rustls-tls", "runtime"] }
k8s-openapi = { version = "0.21.0", default-features = false, features = ["v1_24"] }
rcgen = "0.12.1"
base64 = "0.22.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
json-patch = "1.3"
tracing = "0.1"
tracing-subscriber = "0.3"
futures = "0.3"
x509-parser = "0.16.0"
time = "0.3"